--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="image.png" alt="Imagem de fundo">
+        <img src="image.jpeg" alt="Imagem de fundo">
         <div class="texto">A tua frase aqui</div>
     </div>
 </body>
