--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <body>
     <div class="container">
         <img src="image.jpeg" alt="Imagem de fundo">
-        <div class="texto">A tua frase aqui</div>
+        <div class="texto">AGORA TENS QUE BEBER UM COPO FEITO POR MIM NESSA CANECA COM A BEBIDA QUE TE DEI. BOA SORTE.</div>
     </div>
 </body>
 </html>
