--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
         .container {
             position: relative;
             display: inline-block;
+            max-width: 100%;
         }
 
         .container img {
             max-width: 100%;
+            max-height: 90vh;
             height: auto;
             display: block;
         }
@@ -36,20 +38,22 @@
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            width: 90%;
             color: white;
             font-family: Arial, sans-serif;
-            font-size: 3rem;
+            font-size: clamp(1rem, 5vw, 2.5rem);
             font-weight: bold;
             text-align: center;
-            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.8);
-            padding: 10px 20px;
+            text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.9);
+            line-height: 1.3;
+            overflow-wrap: break-word;
         }
     </style>
 </head>
 <body>
     <div class="container">
-        <img src="image.jpeg" alt="Imagem de fundo">
-        <div class="texto">AGORA TENS QUE BEBER UM COPO FEITO POR MIM NESSA CANECA COM A BEBIDA QUE TE DEI. BOA SORTE.</div>
+        <img src="image.png" alt="Imagem de fundo">
+        <div class="texto">Tens que beber um copo feito por mim na nova caneca com a bebida que te dei. Boa sorte e Bom Natal ❤️</div>
     </div>
 </body>
 </html>
