--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 </head>
 <body>
     <div class="container">
-        <img src="image.png" alt="Imagem de fundo">
+        <img src="image.jpeg" alt="Imagem de fundo">
         <div class="texto">Tens que beber um copo feito por mim na nova caneca com a bebida que te dei. Boa sorte e Bom Natal ❤️</div>
     </div>
 </body>
