--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
     <div class="container">
         <img src="image.jpeg" alt="Imagem de fundo">
-        <div class="texto">Tens que beber um copo feito por mim na nova caneca com a bebida que te dei. Boa sorte e Bom Natal ❤️</div>
+        <div class="texto">Tens que beber um penalty feito por mim na nova caneca com a bebida que te dei. Boa sorte e Bom Natal ❤️</div>
     </div>
 </body>
 </html>
